2004-02-17  Alexander Larsson  <alexl@redhat.com>

	* gtkfilesystemgnomevfs.c:
	Build as a module inside gnome-vfs. Module API not finalized, but
	I wanted something in cvs.
	Also fixes a few issues and adds some TODOs.
	
2004-02-03  Federico Mena Quintero  <federico@ximian.com>

	* Moved from the gtkfilechooser module on CVS to gnome-vfs/gtk.

2004-01-30  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c: Use "#ifdef USE_GCONF" for the
	bookmarks code.  For now we will just use the code from
	GtkFileSystemUnix, so that both implementations share the same
	bookmarks.

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_add_bookmark): Use the code from
	GtkFileSystemGnomeVFS.
	(gtk_file_system_gnome_vfs_remove_bookmark): Likewise.
	(gtk_file_system_gnome_vfs_list_bookmarks): Likewise.

2004-01-19  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_volume_for_path): Look upwards
	through the parents of the path until we get a volume that is
	user-visible.

2004-01-15  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_volume_for_path): Implement.
	(gtk_file_system_gnome_vfs_list_roots): Removed.
	(gtk_file_system_gnome_vfs_get_root_info): Removed.
	(volume_mount_unmount_cb): Oops, emit "volumes-changed", not
	"roots-changed".
	(drive_connect_disconnect_cb): Likewise.
	(struct _GtkFileSystemGnomeVFS): Removed the roots and local_roots
	fields.

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_create_folder): Use the enum equivalent
	of 0777 as the mode for gnome_vfs_make_directory(); the umask will
	do the right thing.

2003-12-23  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c (struct _GtkFileSystemGnomeVFS): Changed
	the icon_theme to be a GtkIconTheme rather than a GnomeIconTheme.
	Added a screen field.