@@ -1,10 +1,18 @@
 2004-02-17  Alexander Larsson  <alexl@redhat.com>
 
 	* gtkfilesystemgnomevfs.c:
+	Clean up todo list
+	Canonicalize uris for folder lookup
+	Add filesystem volume
+	Various small fixes
+	
+2004-02-17  Alexander Larsson  <alexl@redhat.com>
+
+	* gtkfilesystemgnomevfs.c:
 	Build as a module inside gnome-vfs. Module API not finalized, but
 	I wanted something in cvs.
 	Also fixes a few issues and adds some TODOs.
-	
+
 2004-02-03  Federico Mena Quintero  <federico@ximian.com>
 
 	* Moved from the gtkfilechooser module on CVS to gnome-vfs/gtk.
